2019-02-20: Fixed: Modified FlashServiceFindNum() so that it will find services even if a transponder occupies more than one transponder entry (e.g. 1MHz offset)
2019-02-21: Fixed: The title area has never been erased if marked dirty
            Fixed: The logo area has never been erased if marked dirty
2019-02-22: Added: DO_SYNC and NO_SYNC - human-friendly arguments to OSDMenuUpdate()
            Fixed: OSDMenuGetW() and OSDMenuPutS() could not handle all sizes of the standard fonts (new: use size + 0xB for bold fonts)
            Added: OSDMenuGetH() to get a string's height
            Added: OSDMenuGetW(), OSDMenuGetH() and OSDMenuPutS() made public (i.e. part of the API)
            Fixed: OSDDrawList() limited the width of the name even without value arrows and a value itself
            Fixed: OSDDrawScrollBar() didn't take into account the different number of lines of the two OSDMenuDisplayModes
            Added: OSDMenuItemModifyNameColor() to change the color of the name separately from the color of the item line
            Added: OSDMenuItemModifyValueLeftArrowGap() to be able to control the distance between name and value
            Added: OSDMenuSetMemo() to be able to initialize and control an OSDMemo from scratch
            Added: OMDM_Text - an OSDMemo that won't scoll beyond its last line
            Modified: OSDMenuSetMemo() can either set OMDM_Memo or OMDM_Text now
            Added: OSDMenuSetLineHeight() and enums tLineHeight to allow for a different number of lines
            Added: OSDMenuGetNrOfLines() to query the current number of lines
            Fixed: The ScrollBar graphics contained various pixels with slightly wrong color
            Added: New cursor graphics that are necessary for different line heights (i.e. different number of lines)
            Fixed: OSDMenuSetCursor() doesn't draw the new cursor
            Added: OSDMemoFormatText() to allow a dynamic change of the font size (i.e. the number of lines)